[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayerCameraBlenderStyle.gd" type="Script" id=1]
[ext_resource path="res://Textures/heat_grid.png" type="Texture" id=2]

[node name="PlayerCamera" type="Spatial"]
script = ExtResource( 1 )

[node name="RotRef" type="Spatial" parent="."]

[node name="RotY" type="Spatial" parent="."]

[node name="RotX" type="Spatial" parent="RotY"]

[node name="RotZ" type="Spatial" parent="RotY/RotX"]

[node name="CameraPersp" type="Camera" parent="RotY/RotX/RotZ"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
current = true
fov = 90.0

[node name="OriginMarker" type="Sprite3D" parent="."]
visible = false
modulate = Color( 0, 1, 0.529412, 1 )
axis = 1
texture = ExtResource( 2 )

[node name="CameraOrtho" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0 )
projection = 1
